--- a/Css.css
+++ b/Css.css
@@ -19,9 +19,8 @@ body
 	width: 700px;
 	text-align: center;
     	display: block;	
-    	margin-left: auto;
+    	margin-left: 150px;
     	margin-right: auto;
-	float: center;
 }
 .Logo
 {
